@@ -1,6 +1,11 @@
 1.0
 ===
 
+- Applied Steven Radack's patch fixing MR-449
+  "Change ResourceFileHandler to add HTTP cache headers"
+  Used some of Andre Loker's suggestions. Wont use Assembly CodeBase as I think that might 
+  introduce security checks that are hard to deal on shared hosts
+
 - Applied Andre Loker's patch fixing MR-453
   "FormHelper.PasswordNumberField/PasswordField: option to decide whether to fill value attribute"
 
